Initial commit Rip out migrations stuff

--- a/Swampnet.Evl.Web/appsettings.json
+++ b/Swampnet.Evl.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Swampnet.Evl.Web-EFE1EECD-F6D1-41BF-964B-9B973CD2C51F;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=db-main;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
