Add rules / details page Prolly going to rip this out and use Vue

--- a/Swampnet.Evl.Web/Swampnet.Evl.Web.csproj
+++ b/Swampnet.Evl.Web/Swampnet.Evl.Web.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Swampnet.Core\Swampnet.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\RuleViewModels\" />
+  </ItemGroup>
+
 </Project>
